--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx @11ty/eleventy & npx vite",
-    "build": "npx @11ty/eleventy & npx vite build"
+    "dev": "run-s eleventy:build vite:dev",
+    "build": "run-s eleventy:build vite:build",
+    "eleventy:dev": "npx @11ty/eleventy --serve",
+    "eleventy:build": "npx @11ty/eleventy",
+    "vite:dev": "npx vite",
+    "vite:build": "npx vite build"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +20,9 @@
     "@11ty/eleventy": "^3.1.1"
   },
   "devDependencies": {
+    "del-cli": "^6.0.0",
+    "delete-empty": "^3.0.0",
+    "npm-run-all": "^4.1.5",
     "vite": "^7.0.2"
   }
 }
