--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "@11ty/eleventy": "^3.1.1"
+    "@11ty/eleventy": "^3.1.1",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "del-cli": "^6.0.0",
